# TextGenie

./: Favicon Design Brief.html  app.py  document_processor.py  pyproject.toml  rag_system.py  readme.md  requirements.txt  translation_service.py
attached_assets/: app_1751020850549.py  document_processor_1751020850550.py  models_1751020850551.py  pyproject_1751020850551.toml  rag_system_1751020850551.py  replit_1751020850552.md  session=test_session_1751020850552  translation_service_1751020850553.py
static/css/: style.css
static/js/: main.js
templates/: index.html
uploads/: 03b0db40-6652-4798-b7ae-90969bf4d192_1751042164226_algos_for_classification.txt  6c7be6b7-b82b-42c5-b5fe-435af58f6f55_1751111446555_crop_recommendation_report.docx
