[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "deep-translator>=1.11.4",
    "docx>=0.2.4",
    "email-validator>=2.2.0",
    "faiss-cpu>=1.11.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.22.0",
    "google-generativeai>=0.8.5",
    "gunicorn>=23.0.0",
    "langchain-core>=0.3.66",
    "langchain-groq>=0.3.4",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.0.10",
    "langchain-community>=0.3.26",
    "groq>=0.29.0",
    "numpy>=2.3.1",
    "python-docx>=1.2.0",
]
